# Learning-LLM

./: .gitignore  README.md  pyproject.toml
Data/: dataset_creation.py  preprocessing.py
Data preparation and sampling/: dracula.txt
Models/: config.py  gpt-2.py  gpt2.py  llama.py  train.py
Train/: classification_post_train.py  instructions_post_train.py  load_pretrained_gpt2.py  train.py
notebooks/Train/: training_mini_llama.ipynb
notebooks/Trainnig test/: classification.ipynb
