[project]
name = "learning-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "fastparquet>=2026.3.0",
    "hf-xet>=1.5.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "tiktoken>=0.12.0",
    "torch==2.4.1",
    "torch-directml==0.2.5.dev240914",
    "transformers==4.46.3",
]
